# pop3lib-mirror

./: .cproject  .project  ALL_BUILD.vcproj  CMakeLists.txt  Makefile  README  ZERO_CHECK.vcproj  ZERO_CHECK.vcxproj.filters  poplib.sln  poplib.vcproj
.kdev4/: poplib.kdev4
include/: .kdev_include_paths  AbstractMapObj.h  Ip.h  Map.h  MapDat.h  MapHeader.h  MapLand.h  MapObjDiscovery.h  MapObjTrigger.h  MapObject.h  Mappack.h  MappackMap.h  Marker.h  PopGame.h  String16.h  UTFConversion.h  global.h  poplib.h
include/bits/: mapBits.h
include/dmkp/: FileInfo.h  FileWriter.h  PopObject.h  PopSound.h  cMapManager.h  cPopSoundManager.h  cStringArray.h  cStringBuilder.h  cX0RBytes.h  colourConstants.h  dialogResult.h  memory.h  popObjectConstants.h
include/systemUtils/: Dir.h  File.h
src/: Ip.cpp  Map.cpp  MapDat.cpp  MapHeader.cpp  MapLand.cpp  MapObjDiscovery.cpp  MapObjGeneric.cpp  MapObjTrigger.cpp  Mappack.cpp  MappackMap.cpp  StrUtil.cpp  String16.cpp  UTFConversion.cpp
src/dmkp/: FileInfo.cpp  FileReader.cpp  FileWriter.cpp  RAW.cpp  cMapManager.cpp  cStringBuilder.cpp  messageBox.cpp  popData.cpp
src/systemUtils/: Dir.cpp  File.cpp
tests/: ALL_BUILD.vcproj  CMakeLists.txt  Makefile  datTest.cpp  datTest.vcproj  hdrTest.cpp  hdrTest.vcproj  hdrTest.vcxproj.filters  mappackTest.cpp  mappackTest.vcproj  mappackTest.vcxproj  mappackTest.vcxproj.filters  objectsTest.cpp  objectsTest.vcproj  objectsTest.vcxproj
tests/Asgard Worlds I/: levl2001.hdr  levl2003.hdr  levl2004.hdr  levl2008.hdr  levl2012.hdr  mappack.txt
trunk/: .cproject  .project  ALL_BUILD.vcproj  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AUTHORS  CMakeLists.txt  Makefile  ZERO_CHECK.vcproj  ZERO_CHECK.vcxproj  poplib.kdev4  poplib.sln  poplib.vcproj  poplib.vcxproj  poplib.vcxproj.filters
trunk/.kdev4/: poplib.kdev4
trunk/include/: AbstractMapObj.h  Map.h  MapDat.h  MapHeader.h  MapLand.h  MapObjDiscovery.h  MapObjGeneric.h  MapObjTrigger.h  MapObject.h  Mappack.h  MappackMap.h  Marker.h  PopGame.h  StrUtil.h  String16.h  global.h
trunk/include/bits/: mapBits.h  mapHeaderBits.h
trunk/include/dmkp/: Colour.h  File.h  FileReader.h  MapObjectEffect.h  RAW.h  cPopMemory.h  cString.h  cWavFile.h  messageBox.h  msgBoxEnums.h  popData.h
trunk/include/systemUtils/: Dir.h  File.h
trunk/src/: .kdev_include_paths  Map.cpp  MapDat.cpp  MapHeader.cpp  MapLand.cpp  MapObjGeneric.cpp  Mappack.cpp  MappackMap.cpp  PopGame.cpp  StrUtil.cpp  String16.cpp
trunk/src/dmkp/: Colour.cpp  File.cpp  PopObject.cpp  PopSound.cpp  cPopMemory.cpp  cPopSoundManager.cpp  cString.cpp  cStringArray.cpp  cWavFile.cpp  memory.cpp
trunk/src/systemUtils/: Dir.cpp  File.cpp
trunk/tests/: CMakeLists.txt  Makefile  datTest.cpp  datTest.vcproj  datTest.vcxproj  datTest.vcxproj.filters  hdrTest.cpp  hdrTest.vcproj  hdrTest.vcxproj  mappackTest.cpp  objectsTest.cpp  objectsTest.vcproj  objectsTest.vcxproj.filters  tests.sln
trunk/tests/Asgard Worlds I/: levl2002.hdr  levl2005.hdr  levl2006.hdr  levl2007.hdr  levl2009.hdr  levl2010.hdr  levl2011.hdr  levl2013.hdr  levl2014.hdr  levl2015.hdr  levl2016.hdr
trunk/visual/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  poplib.sln  poplib.vcxproj
trunk/visual/tests/: datTest.vcxproj  datTest.vcxproj.filters  hdrTest.vcxproj  mappackTest.vcxproj  mappackTest.vcxproj.filters  objectsTest.vcxproj
visual/: ALL_BUILD.vcxproj.filters  poplib.vcxproj.filters
visual/tests/: hdrTest.vcxproj.filters  objectsTest.vcxproj.filters
